5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1646_869.log
== TEST (2019-04-09 16:07:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:10:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.5)/100)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:10:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.5)/100)
	print(total)
-- OUTPUT:
199.08955
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:11:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.5)/100)
	print(total)
else:
	total = valor
	print(total)
-- OUTPUT:
199.08955
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:11:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.5)/100)
	print(total)
else:
	total = valor
	print(total)
-- OUTPUT:
199.08955
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:11:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.5)/100)
	print(total)
else:
	total = valor
	print(total)
-- EXECUTION TIME:
0.180335
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
199.08955
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
199.52735
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:12:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.5)/100)
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- OUTPUT:
199.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:12:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.5)/100)
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- OUTPUT:
199.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.5)/100)
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- OUTPUT:
199.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.5)/100)
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- EXECUTION TIME:
0.158894
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
199.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
199.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.05)/100)
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- EXECUTION TIME:
0.190424
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
199.99
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
200.43
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 0.05)/100)
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- OUTPUT:
199.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - (valor * 0.5)
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- OUTPUT:
100.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:15:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - (valor * 0.05)
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:17:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 5)/1
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- ERROR:
File "XXXX", line 8
    print(round(total,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:17:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 5)/100)
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:17:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input(""))

if (valor >= 200):
	total = valor - ((valor * 5)/100)
	print(round(total,2))
else:
	total = valor
	print(round(total,2))
-- EXECUTION TIME:
0.146079
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
